# Realtime_mlx_STT

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_DOCUMENTATION.md  MLX_INSTALLATION_GUIDE.md  README.md  USAGE_GUIDE.md  bok_konge01_transcription.txt  pyproject.toml  requirements.txt  setup.py  simple_mlx_whisper_test.py  test_model_download.py  test_pyautogui.py  transcribe_file.py  vertical-slice-overview.md
.claude/: settings.local.json
RealtimeSTT/: __init__.py  audio_recorder_client.py  mlx_transcriber.py
example_server/: README.md  server_example.py  server_web_client.html
examples/: README.md  README_SERVER.md  continuous_transcription.py  continuous_transcription_pasting.py  openai_transcription.py  server_client_example.py  server_example.py  server_web_client.html  simple_vad_example.py  simple_wake_word_detection.py  transcribe_file.py  transcribe_with_vad.py  vad_transcription.py  vad_transcription_with_pasting.py  wake_word_detection.py  wake_word_mlx_clipboard.py  wake_word_openai_clipboard.py  wake_word_openai_transcription.py
logs/: logging_alignment_summary.md
realtime_mlx_stt/: README.md  REFACTORING_PLAN.md  client.py  config.py
scripts/: set_logging_env.sh
specs/: TranscriptionRefactor_spec.md  audio_capture_spec.md  cleanup_implementation_summary.md  codebase_issues_and_improvements.md  deep_analysis_recommendations.md  deep_layer_comparison_analysis.md  factual_codebase_analysis.md  final_architecture_recommendation.md  interfaces_spec.md  logging_alignment_spec.md  logging_analysis.md  logging_design.md  optimization_spec.md  (+12 more)
(+108 files in other folders)
