[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Realtime_mlx_STT"
version = "0.1.0"
description = "Real-time speech-to-text transcription optimized for Apple Silicon"
readme = "README.md"
authors = [
    {name = "Kristoffer Vatnehol", email = "kristoffer.vatnehol@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pyaudio>=0.2.11",
    "mlx>=0.0.4",
    "librosa>=0.9.2",
    "tiktoken>=0.3.0",
    "huggingface_hub>=0.15.1,<0.21.0",
    "webrtcvad>=2.0.10",
    "torch>=2.0.0",
    "scipy>=1.8.0",
    "soundfile>=0.10.3",
    "colorama>=0.4.4",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.3.0",
    "websocket-client>=1.4.0",
    "requests>=2.28.0",
]
wakeword = [
    "pvporcupine>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "setuptools>=65.0.0",
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false